<?xml version="1.0"?>
<package format="3">
  <name>multifarmbot</name>
  <version>0.0.1</version>
  <description>Metapackage for multifarmbot ROS2 project</description>
  <maintainer email="tomoemmanuel@gmail.com">emmanuel tomo</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>multifarmbot_agents</exec_depend>
  <exec_depend>multifarmbot_bringup</exec_depend>
  <exec_depend>multifarmbot_control</exec_depend>
  <exec_depend>multifarmbot_description</exec_depend>
  <exec_depend>multifarmbot_localization</exec_depend>
  <exec_depend>multifarmbot_msgs</exec_depend>
  <exec_depend>multifarmbot_navigation</exec_depend>
  <exec_depend>multifarmbot_ui</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>