cmake_minimum_required(VERSION 3.5)
project(multifarmbot_msgs)

find_package(ament_cmake REQUIRED)
# find_package(rosidl_default_generators REQUIRED)

# rosidl_generate_interfaces(${PROJECT_NAME}
#   # Add message/service/action files here, e.g.:
#   # "msg/Example.msg"
#   # "srv/Example.srv"
#   # "action/Example.action"
# )

# ament_export_dependencies(rosidl_default_runtime)

ament_package()