<?xml version="1.0"?>
<package format="3">
  <name>multifarmbot_scripts</name>
  <version>0.0.1</version>
  <description>Scripts package for multifarmbot</description>
  <maintainer email="tomoemmanuel@gmail.com">emmanuel tomo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>